# aia-software-training

./: .pre-commit-config.yaml  README.md  aviation.py  main.py  mkdocs.yml  passengers_per_day.py  pyproject.toml
.github/workflows/: check.yml
analysis/: passengers_per_day.py  required_global_fleet.py
docs/: aviation.md  fleet.md  index.md
docs/assets/: bwb_jet_zero.jpg:Zone.Identifier
docs/javascripts/: mathjax.js
src/aviation/: __init__.py  aviation.py  fleet.py  units.py
tests/: test_aviation.py  test_engine.py  test_model.py
