[project]
name = "aviation"
version = "0.1.0"
description = "A simple model of global aviation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
docs = [
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-material>=9.6.20",
]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"
